--- a/views/rifa/details.ejs
+++ b/views/rifa/details.ejs
@@ -139,7 +139,7 @@
             <input type="text" id="numerosSelecionadosVisivel" readonly>
         </div>
         
-        <input type="hidden" name="numerosSelecionados" id="numerosSelecionados">
+        <input type="hidden" name="numerosSelecionados" id="numerosSelecionados" required>
         
         <br>
         <div>
